remove leftover jdk.incubator files